--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.2.16", features = ["derive"] }
+colored = { version = "2.0.0" }
+strum = { version = "0.24.1", features = ["derive"] }
+strum_macros = "0.24.2"
