--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.2.16", features = ["derive"] }
 colored = { version = "2.0.0" }
+confy = "0.4.0"
 console = "0.15.1"
 dialoguer = { version = "0.10.2", features = ["fuzzy-matcher", "fuzzy-select"] }
 regex = "1.6.0"
+serde = { version = "1.0.143", features = ["derive"] }
 strum = { version = "0.24.1", features = ["derive"] }
 strum_macros = "0.24.2"
