--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ colored = { version = "2.0.0" }
 confy = "0.4.0"
 console = "0.15.1"
 dialoguer = { version = "0.10.2", features = ["fuzzy-matcher", "fuzzy-select"] }
+dirs-next = "2.0.0"
 regex = "1.6.0"
 serde = { version = "1.0.143", features = ["derive"] }
+serde_json = "1.0.83"
 strum = { version = "0.24.1", features = ["derive"] }
 strum_macros = "0.24.2"
